[gd_scene load_steps=4 format=2]

[ext_resource path="res://Rooms/journalist/paper.png" type="Texture" id=1]
[ext_resource path="res://Riddles/Paper_code/nag.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 183.564

[node name="Node2D" type="StaticBody2D"]
position = Vector2( -6.5, 0 )
scale = Vector2( 0.333858, 0.354399 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 10.0046, -7.56288 )
scale = Vector2( 0.338638, 0.590307 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 22.3665, -19.4431, -9.50285, 5.08454, -3.16235, 24.2729, 24.2019, 13.9279, 25.5367, -17.7746 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -16.8105, 41.1739 )
shape = SubResource( 1 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
